# ner_inference

./: README.md
ner_inference/: Cargo.toml
ner_inference/src/: bert_classification.rs  main.rs  mod.rs
