[package]
name = "ner_inference"
version = "0.3.0"
edition = "2021"

[dependencies]


anyhow = { version = "1", features = ["backtrace"] }
candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.5.1" }
candle-nn =  { git = "https://github.com/huggingface/candle.git", version = "0.5.1" }
candle-transformers =  { git = "https://github.com/huggingface/candle.git",version = "0.5.1" }
candle-examples = { git = "https://github.com/huggingface/candle.git", version = "0.5.0" }
clap = { version = "4.2.4", features = ["derive"] }
hf-hub = "0.3.0"
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.99"
tokenizers = { version = "0.19.1", default-features = false }
tracing = "0.1.37"
tracing-chrome = "0.7.1"
tracing-subscriber = "0.3.7"
